white space fix2

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,6 @@ html,body
     margin: 0px;
     padding: 0px;
     text-align: center;
-     
 }
 h1{
     font-size: 500%;
@@ -71,6 +70,5 @@ hr{
     font-weight: normal;
     font-family: 'Cairo', sans-serif;
     margin-top: 0;
-    position: relative;
-    left: 60px;
+    
 }
